@@ -1,6 +1,15 @@
 2007-03-02  Ray Strode  <rstrode@redhat.com>
 
 	Patch from
+	Laszlo (Laca) Peter <laszlo.peter@sun.com>
+
+	* gconf/gconftool.c (do_makefile_install):
+	don't bail on first error when multiple schemas are 
+	installed in one go (bug 385142).
+
+2007-03-02  Ray Strode  <rstrode@redhat.com>
+
+	Patch from
 	Padraig O'Briain <padraig.obriain@sun.com>
 
 	* configure.in:
